# pliszt

./: .gitignore  README.md  pyproject.toml
.github/workflows/: feature_ci.yaml  master_ci.yaml
pliszt/: processing.py  reading.py
tests/: test_processing.py  test_reading.py
