[tool.poetry]
name = "pliszt"
version = "0.1.0"
description = "Analysis of classical piano."
authors = ["Ryan O'Sullivan <osullivryan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
music21 = "^5.7.2"
plotly = "^4.8.1"
numpy = "^1.18.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
